# mp3_player

./: Readme.md  relatorio_tecnico.md
design/: CLI.cpp  CLI.h  CMakeLists.txt  Equalizer.cpp  Equalizer.h  FileManager.cpp  FileManager.h  MP3Player.cpp  MP3Player.h  Makefile  MediaPlayer.h  Playlist.cpp  Playlist.h  Readme.md  Track.cpp  Track.h  main.cpp
